--- a/styles/main.css
+++ b/styles/main.css
@@ -477,7 +477,10 @@ main .container .about h2 {
 .about-container .contact-info {
     width: 100%;
     height: 200px;
-    background: gray;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 15px;
+    color: var(--primary-200);
 }
 
 /* 
