--- a/styles/main.css
+++ b/styles/main.css
@@ -83,7 +83,7 @@ body {
 
 p {
     margin-bottom: 1.5rem;
-    max-width: 45em;
+    /* max-width: 45em; */
 }
 
 h1,
@@ -453,13 +453,14 @@ main {
 }
 main .container {
     display: flex;
+    flex-direction: column;
     height: 100vh;
     max-width: var(--max-width);
     width: 100%;
-    /* background-color: var(--primary-100); */
 }
 
-main .container .about h2 {
+main .container .section-container h2 {
+    margin-top: 10px;
     border-bottom: 1px solid gray;
 }
 
@@ -482,7 +483,10 @@ main .container .about h2 {
     padding: 5px 15px;
     color: var(--primary-200);
 }
-
+/* work experience */
+.work p {
+    color: var(--primary-200);
+}
 /* 
 =============== Footer =============== 
 */
