--- a/styles/main.css
+++ b/styles/main.css
@@ -58,13 +58,14 @@ html {
     --fixed-width: 600px;
 
     /* box shadowing */
-    --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-    --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-        0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-        0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-        0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    --shadow-1: 0 1px 3px 0 rgba(156, 137, 180, 0.1),
+        0 1px 2px 0 rgba(156, 137, 180, 0.06);
+    --shadow-2: 0 4px 6px -1px rgba(156, 137, 180, 0.1),
+        0 2px 4px -1px rgba(156, 137, 180, 0.06);
+    --shadow-3: 0 10px 15px -3px rgba(156, 137, 180, 0.1),
+        0 4px 6px -2px rgba(156, 137, 180, 0.05);
+    --shadow-4: 0 20px 25px -5px rgba(156, 137, 180, 0.1),
+        0 10px 10px -5px rgba(156, 137, 180, 0.04);
 }
 
 body {
@@ -158,7 +159,7 @@ ul {
 
 .btn:hover {
     background-color: var(--primary-700);
-    box-shadow: var(--shadow-3);
+    box-shadow: var(--shadow-2);
 }
 
 .btn-hipster {
@@ -454,13 +455,19 @@ main {
 main .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
     max-width: var(--max-width);
     width: 100%;
 }
 
+main .container .section-container {
+    box-shadow: var(--shadow-3);
+    padding-left: 10px;
+    margin-bottom: 20px;
+}
+
 main .container .section-container h2 {
     margin-top: 10px;
+    font-family: var(--bodyFont);
     border-bottom: 1px solid gray;
 }
 
@@ -468,12 +475,11 @@ main .container .section-container h2 {
 .about-container {
     display: flex;
     justify-content: space-between;
-    width: var(--max-width);
+    box-shadow: var(--shadow-2);
 }
 .about-container .avatar img {
-    height: 200px;
+    height: 225px;
     border-radius: var(--borderRadius);
-    box-shadow: var(--shadow-3);
 }
 .about-container .contact-info {
     width: 100%;
@@ -500,4 +506,5 @@ footer .footer-content {
     background: green;
     width: 100%;
     max-width: var(--max-width);
+    box-shadow: var(--shadow-4);
 }
