--- a/styles/main.css
+++ b/styles/main.css
@@ -94,7 +94,7 @@ h4,
 h5 {
     margin: 0;
     margin-bottom: 1.38rem;
-    font-family: var(--headingFont);
+    font-family: var(--bodyFont);
     font-weight: 400;
     line-height: 1.3;
     text-transform: capitalize;
@@ -103,6 +103,11 @@ h5 {
 h1 {
     margin-top: 0;
     font-size: 2rem;
+    font-weight: bold;
+    /* text-align: center; */
+    box-shadow: var(--shadow-4);
+    padding: 0 0 5px 15px;
+    color: var(--primary-200);
 }
 
 h2 {
@@ -462,6 +467,7 @@ main .container {
 main .container .section-container {
     box-shadow: var(--shadow-2);
     padding-left: 10px;
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
