feat: code, projects, courses sections add

--- a/styles/main.css
+++ b/styles/main.css
@@ -506,6 +506,10 @@ main .container .section-container h2 {
 .skills-container div {
     margin-right: 50px;
 }
+/* projects */
+.liLink {
+    padding-left: 15px;
+}
 
 /* 
 =============== Footer =============== 
