--- a/styles/main.css
+++ b/styles/main.css
@@ -207,11 +207,12 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background-color: white; */
+    /* position: fixed; */
 }
 .nav-center {
     width: 90vw;
     max-width: var(--max-width);
-    position: fixed;
     background: linear-gradient(to top, var(--primary-800), var(--primary-300));
     border-radius: var(--borderRadius);
 }
@@ -221,14 +222,14 @@ ul {
     justify-content: space-between;
     align-items: center;
 }
-.nav-header img {
+/* .nav-header img {
     height: 3.7rem;
     border-radius: var(--borderRadius);
 }
 .nav-logo {
     display: flex;
     align-items: center;
-}
+} */
 .nav-btn {
     padding: 0.15rem 0.75rem;
     justify-content: center;
@@ -406,7 +407,7 @@ main .container .section-container h2 {
 }
 .about-container .contact-info {
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     display: flex;
     flex-direction: column;
     padding: 5px 15px;
@@ -490,4 +491,19 @@ footer .footer-content {
 .a-link:hover {
     color: var(--primary-300);
     transition: var(--transition);
+}
+/* to top button */
+.top {
+    font-size: 40px;
+    color: var(--white);
+    position: fixed;
+    bottom: 50px;
+    right: 75px;
+    opacity: 0;
+}
+.top:hover {
+    color: var(--primary-200);
+}
+.top-show {
+    opacity: 1;
 }
