--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@
 
 html {
     font-size: 100%; /*16px*/
+    /* scroll-behavior: smooth; */
 }
 
 :root {
@@ -437,6 +438,11 @@ main .container .section-container h2 {
     color: var(--primary-200);
 }
 /* work experience */
+
+/* education */
+.education {
+    padding-bottom: 15px;
+}
 
 /* skills */
 .skills-container {
