fix: edit contact modal window

--- a/styles/main.css
+++ b/styles/main.css
@@ -317,6 +317,7 @@ ul {
     position: relative;
     display: flex;
     flex-direction: column;
+    border-radius: var(--borderRadius);
 }
 .contact-info-container div {
     margin-top: 5px;
